--- a/天台胡同/css/style.css
+++ b/天台胡同/css/style.css
@@ -255,7 +255,7 @@ footer .col-footer-3 input[type="text"]{ outline: medium none;color: #999999;dis
 
 .button.bt1 {background: #ec495e;color: #ffffff;padding: 10px 30px;text-align: center;border:2px solid #ec495e;font-weight: bold; font-size: 15px;border-radius: 5px;}
 .button.bt1:hover{background: transparent;color: #ec495e;}
-.button-subcribe{background-color: #ec495e;color: #fff;font-weight: bold;border: none;width: auto}
+.button-subcribe{background-color: #ec495e;color: #fff;font-weight: bold;border: none;width: auto;height:10px;line-height: 4px;}
 .button-subcribe:hover{background-color: #444;}
 
 
