--- a/天台胡同/css/style.css
+++ b/天台胡同/css/style.css
@@ -188,6 +188,48 @@ footer .col-footer-3 input[type="text"]{ outline: medium none;color: #999999;dis
 .button-subcribe:hover{background-color: #444;}
 
 /* ---------------------------------------------------------------------------- */
+/* ------------------------------Portfolio Box--------------------------------- */
+/* ---------------------------------------------------------------------------- */	
+.portfolio-box {display: block;position: relative;margin: auto;overflow: hidden;max-width: 350px;}
+.portfolio-box:before{z-index:1;content:"";position:absolute;left:10px;right:10px;top:10px;bottom:10px;border-top:1px solid #ec495e;border-bottom:1px solid #ec495e;transform:scale(1,1);-moz-transform:scale(1,1);-webkit-transform:scale(1,1);-ms-transform:scale(1,1);transition:all 0.4s ease-in-out 0s;-moz-transition:all 0.4s ease-in-out 0s;-webkit-transition:all 0.4s ease-in-out 0s;}
+.portfolio-box:after{z-index:1;content:"";position:absolute;left:10px;right:10px;top:10px;bottom:10px;border-left:1px solid #ec495e;border-right:1px solid #ec495e;transform:scale(1,1);-moz-transform:scale(1,1);-webkit-transform:scale(1,1);-ms-transform:scale(1,1);transition:all 0.4s ease-in-out 0s;-moz-transition:all 0.4s ease-in-out 0s;-webkit-transition:all 0.4s ease-in-out 0s;}
+.portfolio-box:hover:before{transform:scale(0,1);-moz-transform:scale(0,1);-webkit-transform:scale(0,1);-ms-transform:scale(0,1)}
+.portfolio-box:hover:after {transform:scale(1,0);-moz-transform:scale(1,0);-webkit-transform:scale(1,0);-ms-transform:scale(1,0)}
+
+/****** Zoom Effect ******/
+.portfolio-box.zoom-effect .portfolio-box-caption{background: none;}
+.portfolio-box.zoom-effect img{-webkit-transition: 0.5s ease;transition: 0.5s ease;}
+.portfolio-box:hover.zoom-effect img{-webkit-transform:scale(1.1); /* Safari and Chrome */-moz-transform:scale(1.02); /* Firefox */-ms-transform:scale(1.1); /* IE 9 */-o-transform:scale(1.1); /* Opera */transform:scale(1.1);}
+
+
+.portfolio-box .portfolio-box-caption {display: block;position: absolute;bottom: 0;width: 100%;height: 100%;text-align: center;color: #fff;-webkit-transition: all .35s;-moz-transition: all .35s;transition: all .35s;}
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {position: absolute;top: 50%;width: 100%;text-align: center;transform: translateY(-50%);}
+
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-detail,
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {padding: 0 15px;text-transform: uppercase;font-weight: 600;letter-spacing: 2px;text-shadow: 2px 2px #111;}
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {font-size: 13px;color: #ec495e;margin-bottom: 10px;}
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {font-size: 16px;margin-bottom: 3px;}
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-detail{transition: opacity 1s ease-out;opacity: 0; height: 0;overflow: hidden;}
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-detail span{font-size: 14px;display:block;}
+
+.portfolio-box:hover .portfolio-box-caption {opacity: 1;background: rgba(236, 73, 94,.4);}
+.portfolio-box:hover .portfolio-box-caption .portfolio-box-caption-content .project-detail{opacity: 1;height: auto;}
+.portfolio-box:hover .portfolio-box-caption .portfolio-box-caption-content .project-category,
+.portfolio-box:hover .portfolio-box-caption .portfolio-box-caption-content .project-name
+{display: none;}
+
+@media(min-width:768px) {
+    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+        font-size: 15px;
+    }
+    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+        font-size: 19px;
+    }
+}
+
+
+/* ---------------------------------------------------------------------------- */
 /* ------------------------------------Crumbs---------------------------------- */
 /* ---------------------------------------------------------------------------- */
 .crumbs {-webkit-box-shadow: 0px 25px 18px -26px rgba(0,0,0,0.75);-moz-box-shadow: 0px 25px 18px -26px rgba(0,0,0,0.75);box-shadow: 0px 25px 18px -26px rgba(0,0,0,0.75);padding:15px 0 15px 30px;margin: 10px 0 30px;}
